--- a/seguros/static/css/styles.css
+++ b/seguros/static/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .navbar.navbar-expand-lg.bg-primary {
-  background-color:teal !important;
+  background-color:rgb(128, 0, 105) !important;
 }
 
 .bodyerror { 
@@ -44,6 +44,13 @@ body {
   opacity: 0.2;
 }
 
+#Central {
+  background-color: rgb(237, 202, 231);    
+  border-style: ridge;    
+  height: 49rem;
+  padding-top: 2rem;      
+}
+
 
 i.fa-solid.fa-house {
     color: black
@@ -65,9 +72,7 @@ tbody tr:nth-child(even)
 }
 */
 
-.navbar.navbar-expand-lg.bg-primary {
-  background-color:rgb(128, 0, 105) !important;
-}
+
 
 .modal-backdrop {
   position:unset !important;
@@ -77,17 +82,19 @@ i.fa-brands, i.fa-solid  {
   color: black;
 }
   
-.list-group-item {
-  background-color:rgb(128, 0, 105) !important;
-  
+.navbar, .list-group-item {
+  background-color:rgb(128, 0, 105) !important;  
 } 
+
+.dropdown {
+  padding: 0.5rem;
+}
 
 .container-fluid {  
   padding: 0rem;    
   border-radius: 0.5rem;  
   border: 1px solid rgb(149, 175, 233);
 }
-
 
  #titulo {
   text-align: center;    
